--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,11 @@
-glassfish-resources.xml
+/target/glassfish-resources.xml
+# NetBeans specific #
+nbproject/private/ build/ nbbuild/ dist/ nbdist/ nbactions.xml nb-configuration.xml
+# Class Files #
+*.class
+# Package Files #
+*.jar *.war *.ear
+# Maven #
+.classpath .project .settings/
+# Vim temporary files #
+*~
